--- a/HackathonTest/HackathonTest/Web.config
+++ b/HackathonTest/HackathonTest/Web.config
@@ -5,15 +5,13 @@
   -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
-  
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <add key="browser" value="Chrome" />
   </appSettings>
   <system.web>
@@ -64,5 +62,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<!--<connectionStrings><add name="HackathonEntities" connectionString="metadata=res://*/Data.TestCase.csdl|res://*/Data.TestCase.ssdl|res://*/Data.TestCase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="HackathonEntities1" connectionString="metadata=res://*/Data.TC.csdl|res://*/Data.TC.ssdl|res://*/Data.TC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="HackathonEntities2" connectionString="metadata=res://*/Data.TC.csdl|res://*/Data.TC.ssdl|res://*/Data.TC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
---><connectionStrings><add name="HackathonEntities" connectionString="metadata=res://*/Data.Hackathon.csdl|res://*/Data.Hackathon.ssdl|res://*/Data.Hackathon.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <!--<connectionStrings><add name="HackathonEntities" connectionString="metadata=res://*/Data.TestCase.csdl|res://*/Data.TestCase.ssdl|res://*/Data.TestCase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="HackathonEntities1" connectionString="metadata=res://*/Data.TC.csdl|res://*/Data.TC.ssdl|res://*/Data.TC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="HackathonEntities2" connectionString="metadata=res://*/Data.TC.csdl|res://*/Data.TC.ssdl|res://*/Data.TC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Hackathon;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+-->
+  <connectionStrings>
+    <add name="DellHackEntities" connectionString="metadata=res://*/Data.DellHackathon.csdl|res://*/Data.DellHackathon.ssdl|res://*/Data.DellHackathon.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=DellHack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
